# ConsoleMan

./: CMakeLists.txt  README.md  consoleman.cpp  legally.txt  logo.txt  main.cpp
include/: GameObject.h  GameWindow.h  IGameInterface.h  LegallyAmbiguousGhost.h  LegallyAmbiguousPellet.h  LegallyAmbiguousPowerPellet.h  MainMenu.h  Player.h  SinglePlayerGame.h  Wall.h  World.h
src/: GameObject.cpp  GameWindow.cpp  IGameInterface.cpp  LegallyAmbiguousGhost.cpp  LegallyAmbiguousPellet.cpp  LegallyAmbiguousPowerPellet.cpp  MainMenu.cpp  Player.cpp  SinglePlayerGame.cpp  Wall.cpp  world.txt
